@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 50notmuch-gentoo.el 291 SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b SHA512 80612ba5ae90f2fbb24b38bae99b660c5e3d58e7390a4bb3a0e5e9b49092e38f189347344286072617935abf7ea08b538f68e8227705ca0b2b44985c4c0d024b WHIRLPOOL c149cfb298cb51bef064c433481444dbd21a20903ee8560ae758a4b4fc0dd983db789b2d1343dc8b30e5e4a0443ee636e5742ba471fe981eb2262ad03567fd22
 AUX 60notmuch-pick-gentoo.el 108 SHA256 5dea2e2113cc3ab74c351f0396ac0a98df9d3eebd14d1e811e6d723cea69d12c SHA512 35da56121a0b13a7c13d5462512277d77dd0b965e0060e58e654056a5a5755e602d3daaf4732673a6a56421fa64e6d0570d655eb1a86fb0ae37af6129a90be16 WHIRLPOOL 52603df04fff71d206fb51d3cea65eb1f403e23495846b90ad8deafeef4d326f08a27c07aa84778bef0f3d962b68d2700c50b31217caeadee9c5f5961a8b9e1c
-EBUILD notmuch-9999.ebuild 4449 SHA256 a88f1be996ff13235c0c095b1e8f7fca4b6868eeb2d343e6e9f703fcb6281e89 SHA512 5a014a6cf2f1c7b5e488d680dfd97d866f80ab00caefa65070b6ffa14b19daaa4843635ae5cd8a050b1a2aeb1ee91d57ac331fc681e078f3659f19f099e83761 WHIRLPOOL aaf51033c6544b96a741a9c7ad4888adfee9cd2ae8f71cfc0ecf01ae6ab2377ca5283b17a1c82664baab58396e411f34be1428922cebd82b55353ead5469b28e
-MISC ChangeLog 2876 SHA256 e2e24c26b17f129159977c55fa6ef53e43e1d143298705fd3c8c8d4065b9a2ac SHA512 35773eb4ade883bcc176b3ddedaaaec06b8a0da5bea70731f80610936d2fdcaa8ed4164ffc3dd5176e6fb0ba88aa59e40d8fcc516d25b957805f904ebd28c948 WHIRLPOOL a0eebf0c9898ec2213457d671d04df034500a61a2f0e14e7300e925d893c1bdb04580f3be6621b5e83bc601e7c98faa5cea3ef5494c86bfa9f7a89c18378af35
+EBUILD notmuch-9999.ebuild 4544 SHA256 71adcfd118a569b66b4815ca4675c0f0a5e2e1d687b528cbaa53c615e0cb2680 SHA512 72964c633a032ee5d288b3a8a4860a59258fde67e543cea02c0b5f49cc35b9c146efde09e50940b089766c32eec26995ebacff8410087167547be166b10668a2 WHIRLPOOL a5a906fc7f17bbb62fd737ecc147246845af1d0eb8245508a436e4e5ff65f046029ace0128fa304ca3c6449ecf1b1582933abfda4b74645af04aaf91f9f328bf
+MISC ChangeLog 3006 SHA256 207e972aad38620aa7b52a269f2d9746f874e214063897e3298ea5dcc582722f SHA512 3d952ef9b9bef7022448846a62785f58e4ce0cbd234cf0e4c450dd820612b5dfe63d3bbd5f97f136ba417b3b4a6c8e2432e21366b435df46228f77dc67740ef4 WHIRLPOOL f488c0132d33ef93e93ba852c90bc891950e0f04ba0da6495884b378d4ea5918e2ac3a37553e708c355714520d57df4b68ac5f63770d5492e48d7150750e2f41
 MISC metadata.xml 1130 SHA256 bef417ea1ad1a12a2639eb9644e7b8fda664f2c19047e2357aa56c3964bafb7b SHA512 e58811e997cdf258f70a9c2baa526d8c3acb76dfc208b43bc8bff3a4d1433ed08231956f9fbe098fd9ee26d4002bdb35617fbb0e578510489c9671d969b84eef WHIRLPOOL e72970d425eda43b1f635406f2ad04c725373662716ed4e4c1e88366da0d80bc2cb9b90da264a3cbd71d474881984b187fcfff15e78ffda7fdf161663e27b5d4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJR2wQWAAoJEPATRTHh2/q1NlgIAJoiBnoaosQe2WrG8tjzRjDt
+Ud16TsE3wQCev00RvS7g7JL2f1Cs0cUJZ/L/JSqJ48VgI9TGHaB5AR7LnJ/7HnpU
+/j/VS8IeLnqHgTx451u7OPLfvXq9infVTbZXnATWwO598fwVlArJ0x+DJXxTeQ3e
+9uOSgeRfqufEgwT5HZqnYP7YsVuzodT2UKIHeoqFlezjU2RbJAWdTri4HaFfkrLP
+K0Zfouq+Y51D/tVYEjVfGRxOXjZim4F43rrFoAaIOr6IxrIYDG1avSmPcMpCxLmB
+1iZSjTMf+eT+WoIEUGLhc9aJHq+KE2/83leBM2tpr0AwFTyOL/qAWhoyJ4Pfk44=
+=MrvC
+-----END PGP SIGNATURE-----
